# NSU-CSaPD

Lab5/: CMakeLists.txt  Lab5  Main.cpp
Lab6/: CMakeLists.txt  Lab6  Main.cpp  exe  my_program
Lab7/: o1  opt1.cpp  opt2.cpp  opt3.cpp
